--- a/star-my.html
+++ b/star-my.html
@@ -37,7 +37,7 @@
             and JavaScript.<br>
             <button><a href="star-cont.html">Glad to know you too</a></button>
         </div>
-        <img class="pic1" src="images/my pic1.jpg">
+        <img class="pic1" src="my pic1.jpg">
     </div>
 
 
@@ -47,10 +47,10 @@
             <div class="list1"><a href="#">AWUDU SEIDU<br> Rashid Tobrazune</a></div>
         </span>
         <span class="images">
-            <img src="logo/facebook.png" width="40" height="40" class="social">
-            <img src="logo/whatsapp.png" width="40" height="40" class="social">
-            <img src="logo/instagram.png" width="40" height="40" class="social">
-            <img src="logo/twitter.png" width="40" height="40" class="social">
+            <img src="facebook.png" width="40" height="40" class="social">
+            <img src="whatsapp.png" width="40" height="40" class="social">
+            <img src="instagram.png" width="40" height="40" class="social">
+            <img src="twitter.png" width="40" height="40" class="social">
         </span>
     </div>
 
