--- a/star-serv.html
+++ b/star-serv.html
@@ -26,21 +26,21 @@
         <h3>What We Offer</h3>
         <div class="services">
             <div class="proj">
-                <img src="logo/book.png" width="60" height="60">
+                <img src="book.png" width="60" height="60">
             <h3>Books</h3>
                 Provision of Short notes, PDF,<br> and Refrencing books related to
                 Field Survey, Astronomy, etc.<br>
                 <button class="btn4 btn22">Read More</button>
             </div>
             <div class="proj">
-                <img src="logo/computer.png" width="60" height="60">
+                <img src="computer.png" width="60" height="60">
                 <h3>Training</h3>
                 Provision of Short training on GeoInformatics <br>softwares,
                 such as ArcGIS, AutoCaD, etc.<br>
                 <button class="btn4 btn22">Read More</button>
             </div>
             <div class="proj">
-                <img src="logo/jobs.png" width="60" height="60">
+                <img src="jobs.png" width="60" height="60">
                 <h3>Jobs Alert</h3>
                 Informing about availables Job within<br>
                 the locality and International.<br>
@@ -80,10 +80,10 @@
             <div class="list1"><a href="star-my.html">AWUDU SEIDU Rashid Tobrazune</a></div>
         </span>
         <span class="images">
-            <img src="logo/facebook.png" width="40" height="40" class="social">
-            <img src="logo/whatsapp.png" width="40" height="40" class="social">
-            <img src="logo/instagram.png" width="40" height="40" class="social">
-            <img src="logo/twitter.png" width="40" height="40" class="social">
+            <img src="facebook.png" width="40" height="40" class="social">
+            <img src="whatsapp.png" width="40" height="40" class="social">
+            <img src="instagram.png" width="40" height="40" class="social">
+            <img src="twitter.png" width="40" height="40" class="social">
         </span>
     </div>
 </body>
