--- a/star-log.html
+++ b/star-log.html
@@ -103,6 +103,8 @@
         <a href="#">Free Available Training <br>
             <h6>Limited Resources</h6>
         </a>
+        
+                                                                
     </div>
     <div class="test">
        <a href="#"> Testimonials</a>
@@ -113,10 +115,10 @@
             <div class="list1"><a href="star-my.html">AWUDU SEIDU Rashid Tobrazune</a></div>
         </span>
         <span class="images">
-            <img src="logo/facebook.png" width="40" height="40" class="social">
-            <img src="logo/whatsapp.png" width="40" height="40" class="social">
-            <img src="logo/instagram.png" width="40" height="40" class="social">
-            <img src="logo/twitter.png" width="40" height="40" class="social">
+            <img src="facebook.png" width="40" height="40" class="social">
+            <img src="whatsapp.png" width="40" height="40" class="social">
+            <img src="instagram.png" width="40" height="40" class="social">
+            <img src="twitter.png" width="40" height="40" class="social">
         </span>
     </div>
 </body>
