--- a/star-cont.html
+++ b/star-cont.html
@@ -36,8 +36,8 @@
             <button>SEND</button>
         </div>
         <div class="us">
-            <img src="logo/mail.png" width="35" height="25"> E-Mail Us:<br><u>tobrazunerashid@gmail.com</u><br>
-            <img src="logo/call.png" width="35" height="25"> Call Us:<br> <u>+(233)-546-494-160</u>
+            <img src="mail.png" width="35" height="25"> E-Mail Us:<br><u>tobrazunerashid@gmail.com</u><br>
+            <img src="call.png" width="35" height="25"> Call Us:<br> <u>+(233)-546-494-160</u>
         </div>
     </div>
 
@@ -48,10 +48,10 @@
             <div class="list1"><a href="star-my.html">AWUDU SEIDU Rashid Tobrazune</a></div>
         </span>
         <span class="images">
-            <img src="logo/facebook.png" width="40" height="40" class="social">
-            <img src="logo/whatsapp.png" width="40" height="40" class="social">
-            <img src="logo/instagram.png" width="40" height="40" class="social">
-            <img src="logo/twitter.png" width="40" height="40" class="social">
+            <img src="facebook.png" width="40" height="40" class="social">
+            <img src="whatsapp.png" width="40" height="40" class="social">
+            <img src="instagram.png" width="40" height="40" class="social">
+            <img src="twitter.png" width="40" height="40" class="social">
         </span>
     </div>
 </body>
