--- a/star-about.html
+++ b/star-about.html
@@ -37,7 +37,8 @@
             <br>
             <button class="btn4 btn22"><a href="star-mod.html">LEARN MORE</a></button>
         </div>
-        <div><img class="pic1" src="images/geompic5.jpg"></div>
+        
+        <div><img class="pic1" src="geompic5.jpg"></div>
     </div>
     <div class="bottom">
         <span class="copy copy1">
@@ -45,10 +46,10 @@
             <div class="list1"><a href="star-my.html">AWUDU SEIDU Rashid Tobrazune</a></div>
         </span>
         <span class="images">
-            <img src="logo/facebook.png" width="40" height="40" class="social">
-            <img src="logo/whatsapp.png" width="40" height="40" class="social">
-            <img src="logo/instagram.png" width="40" height="40" class="social">
-            <img src="logo/twitter.png" width="40" height="40" class="social">
+            <img src="facebook.png" width="40" height="40" class="social">
+            <img src="whatsapp.png" width="40" height="40" class="social">
+            <img src="instagram.png" width="40" height="40" class="social">
+            <img src="twitter.png" width="40" height="40" class="social">
         </span>
     </div>
 </body>
